@@ -173,6 +173,7 @@ $prefix ||= &compute_prefix($dom, $group, $parent);
 	 'prefix', $prefix,
 	 'no_tmpl_aliases', 1,
 	 'no_mysql_db', $got{'mysql'} ? 1 : 0,
+	 'nocreationmail', 1,
 	 'parent', $parent ? $parent->{'id'} : undef,
         );
 if (!$parent) {
